Created database for remote connection

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -331,7 +331,19 @@
    "id": "1cc85c40-3917-4900-9a5b-581c312004e7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "CREATE TABLE flights (flight_id INT AUTO_INCREMENT PRIMARY KEY,flight_date DATETIME NOT NULL,airline VARCHAR(100),flight_num VARCHAR(20),class VARCHAR(20),departure VARCHAR(50),dep_time TIME,arrival VARCHAR(50),arr_time TIME,duration VARCHAR(20),price VARCHAR(20),stops VARCHAR(20));\n",
+    "LOAD DATA INFILE '[/home/divyansh/sem7/IIA/Project/temp.csv' INTO TABLE [flights] FIELDS TERMINATED BY ',' ENCLOSED BY '\"' LINES TERMINATED BY '\\n' IGNORE 1 ROWS;\n",
+    "LOAD DATA INFILE '/home/divyansh/sem7/IIA/Project/temp.csv'\n",
+    "INTO TABLE flights\n",
+    "FIELDS TERMINATED BY ',' \n",
+    "ENCLOSED BY '\"'\n",
+    "LINES TERMINATED BY '\\n'\n",
+    "IGNORE 1 ROWS\n",
+    "(flight_date, airline, flight_num, class, departure, dep_time, arrival, arr_time, duration, price, stops);\n",
+    "CREATE USER 'udbhav1'@'49.36.186.65' IDENTIFIED BY 'udbhav12';\n",
+    "GRANT SELECT ON database.* TO 'udbhav1'@'49.36.186.65'; "
+   ]
   }
  ],
  "metadata": {
